--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
+# vscode
+*.json
+.vscode
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+
 # data
 data/
 
 # reference
 reference/
+
+# 
